--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,295 @@
 
     box-sizing: border-box;
 
+    list-style: none;
+
+    font-family: 'Montserrat';
+
+    text-decoration: none;
+
+}
+
+:root {
+
+    --vermelho: #F53B57;
+    --roxo: #3C40C6;
+    --verde: #05C46B;
+    --azul: #0FBCF9;
+    --amarelo: #FFA801;
+
+}
+
+body {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: var(--vermelho);
+
+    width: 100vw;
+    height: 100vh;
+
+    transition: 0.5s background;
+
+}
+
+main {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    flex-direction: column;
+
+    height: 200px;
+
+}
+
+main div h1 {
+
+    background: white;
+
+    font-size: 3rem;
+
+    text-align: center;
+
+    border-radius: 10px;
+
+    width: 500px;
+    
+    margin-bottom: 1rem;
+    padding: 0 2rem;
+
+    cursor: pointer;
+
+    transition: 0.2s;
+
+}
+
+main div:hover h1 {
+
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+
+}
+
+main div h1 span {
+
+    color: var(--vermelho);
+
+    transition: 0.2s background;
+
+}
+
+main div h2 {
+
+    background: white;
+
+    font-size: 2rem;
+
+    text-align: center;
+
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+
+    padding: 0 2rem;
+
+    cursor: pointer;
+
+    transition: 0.2s;
+
+    visibility: hidden;
+    opacity: 0;
+
+    transform: translateY(-50px);
+
+}
+
+main div:hover h2{
+
+    visibility: visible;
+    opacity: 1;
+    
+    transform: translateY(-16px);
+
+}
+
+main nav ul {
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    background: white;
+
+    font-size: 1.5rem;
+
+    border-radius: 10px;
+
+    width: 500px;
+    height: 60px;
+
+    padding: 0 3.5rem;
+
+}
+
+main nav ul li {
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background: #333;
+    color: white;
+
+    font-weight: 500;
+
+    border: 1px solid;
+
+    border-radius: 50%;
+
+    height: 50px;
+    width: 50px;
+
+}
+
+main nav ul li span {
+
+    background: white;
+
+    font-weight: 600;
+
+    text-align: center;
+
+    border-radius: 10px;
+
+    width: 150px;
+
+    transform: translateY(-100px);
+
+    position: absolute;
+
+    transition: 0.3s;
+
+    visibility: hidden;
+    opacity: 0;
+
+}
+
+main nav ul li:hover span {
+
+    transform: translateY(-60px);
+
+    visibility: visible;
+    opacity: 1;
+
+}
+
+main nav ul li.Home:hover {
+
+    background: var(--vermelho);
+
+}
+
+main nav ul li.Profile:hover {
+
+    background: var(--roxo);
+
+}
+
+main nav ul li.Message:hover {
+
+    background: var(--verde);
+
+}
+
+main nav ul li.Help:hover {
+
+    background: var(--azul);
+
+}
+
+main nav ul li.Setting:hover {
+
+    background: var(--amarelo);
+
+}
+
+main nav ul li.Home:hover span{
+
+    color: var(--vermelho);
+
+}
+
+main nav ul li.Profile:hover span{
+
+    color: var(--roxo);
+
+}
+
+main nav ul li.Message:hover span{
+
+    color: var(--verde);
+
+}
+
+main nav ul li.Help:hover span{
+
+    color: var(--azul);
+
+}
+
+main nav ul li.Setting:hover span{
+
+    color: var(--amarelo);
+
+}
+
+@media(max-width: 600px){
+
+    main div h1 {
+
+        width: 400px;
+    
+    }
+
+    main div h2 {
+
+        width: 400px;
+    
+    }
+
+    main nav ul {
+        
+        width: 400px;
+
+        padding: 0 1rem;
+    
+    }
+
+}
+
+@media(max-width: 550px){
+
+    main div h1 {
+
+        width: 300px;
+    
+    }
+
+    main div h2 {
+
+        width: 300px;
+    
+    }
+
+    main nav ul {
+        
+        width: 300px;
+
+        padding: 0;
+    
+    }
+
 }
