--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,6 @@ main {
 
     flex-direction: column;
 
-    height: 200px;
-
 }
 
 main div h1 {
@@ -65,7 +63,7 @@ main div h1 {
     border-radius: 10px;
 
     width: 500px;
-    
+
     margin-bottom: 1rem;
     padding: 0 2rem;
 
@@ -114,11 +112,11 @@ main div h2 {
 
 }
 
-main div:hover h2{
+main div:hover h2 {
 
     visibility: visible;
     opacity: 1;
-    
+
     transform: translateY(-16px);
 
 }
@@ -138,6 +136,7 @@ main nav ul {
     width: 500px;
     height: 60px;
 
+    margin-bottom: 1rem;
     padding: 0 3.5rem;
 
 }
@@ -224,31 +223,31 @@ main nav ul li.Setting:hover {
 
 }
 
-main nav ul li.Home:hover span{
+main nav ul li.Home:hover span {
 
     color: var(--vermelho);
 
 }
 
-main nav ul li.Profile:hover span{
+main nav ul li.Profile:hover span {
 
     color: var(--roxo);
 
 }
 
-main nav ul li.Message:hover span{
+main nav ul li.Message:hover span {
 
     color: var(--verde);
 
 }
 
-main nav ul li.Help:hover span{
+main nav ul li.Help:hover span {
 
     color: var(--azul);
 
 }
 
-main nav ul li.Setting:hover span{
+main nav ul li.Setting:hover span {
 
     color: var(--amarelo);
 
@@ -313,7 +312,7 @@ footer .socialMedia .fab {
 footer .socialMedia .fab:hover {
 
     color: white;
-    
+
     font-size: 2.5rem;
 
     text-shadow: 0 0 10px black;
@@ -372,61 +371,94 @@ footer a.youtubeLink {
 
 }
 
-footer a.youtubeLink:hover{
-
-    border-radius: 15px;
+footer a.youtubeLink:hover {
 
     background: #E62117;
     color: white;
+
+    font-size: 2.5rem;
+
+    border-radius: 15px;
 
     text-shadow: none;
 
 }
 
-@media(max-width: 600px){
+@media(max-width: 600px) {
 
     main div h1 {
 
         width: 400px;
-    
+
     }
 
     main div h2 {
 
         width: 400px;
-    
+
     }
 
     main nav ul {
-        
+
         width: 400px;
 
         padding: 0 1rem;
-    
+
     }
 
 }
 
-@media(max-width: 550px){
+@media(max-width: 550px) {
 
-    main div h1 {
+    main .divisoriaTexto {
 
-        width: 300px;
-    
+        transform: translateY(-100px);
+
     }
 
-    main div h2 {
+    main .divisoriaTexto h1 {
 
         width: 300px;
-    
+
+    }
+
+    main .divisoriaTexto h2 {
+
+        width: 300px;
+
     }
 
     main nav ul {
-        
+
         width: 300px;
 
         padding: 0;
-    
+
+        transform: translateY(-80px);
+
+    }
+
+    footer {
+
+        font-size: 1.5rem;
+
+    }
+
+    footer .socialMedia .fab,
+    footer a.youtubeLink {
+
+        font-size: 1.5rem;
+
+        width: 40px;
+        height: 40px;
+
+    }
+
+    footer .socialMedia .fab:hover,
+    footer a.youtubeLink:hover {
+
+        font-size: 2rem;
+
     }
 
 }
